--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,15 @@
     ],
     "require": {
         "php": ">=5.3.0",
+        "ext-soap": "*",
         "ass/xmlsecurity": "dev-master"
     },
     "require-dev": {
         "mikey179/vfsStream": "dev-master"
     },
     "autoload": {
-        "psr-0": {
-            "BeSimple\\SoapCommon": "src/"
-        }
-    }
+        "psr-0": { "BeSimple\\SoapCommon": "" }
+    },
+    "target-dir": "BeSimple/SoapCommon",
+    "minimum-stability": "dev"
 }
