Created branch-alias 0.1-dev

--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,10 @@
         "psr-0": { "BeSimple\\SoapCommon": "" }
     },
     "target-dir": "BeSimple/SoapCommon",
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.1-dev"
+        }
+    }
 }
