--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "php": ">=5.3.0",
         "ext-soap": "*",
-        "ass/xmlsecurity": "dev-master"
+        "ass/xmlsecurity": "~1.0"
     },
     "require-dev": {
         "ext-mcrypt": "*",
