[composer] Used a stable version of vfsStream

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "require-dev": {
         "ext-mcrypt": "*",
-        "mikey179/vfsStream": "dev-master"
+        "mikey179/vfsStream": "~1.0"
     },
     "autoload": {
         "psr-0": { "BeSimple\\SoapCommon": "" }
